# rag-llamaindex

./: README.md  pyproject.toml
data/companies/: aero-vance-aviation.txt  city-solve.txt  dataset.json  nova-drive-motors.txt  ukraine-boats.txt
data/companies/prompts/: prompts.txt
src/: agent-setup.ipynb  data-preparation.ipynb  tokenizer.ipynb
